- mobile header icons added

--- a/src/styles/input.css
+++ b/src/styles/input.css
@@ -1,12 +1,32 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');
 
 @tailwind base;
+@tailwind components;
 
-@layer base {
+@layer components {
   body {
     font-family: 'Source Sans Pro', sans-serif;
   }
+
+  .primary-color {
+    @apply text-sky-600;
+  }
+
+  .primary-color-light {
+    @apply text-sky-500;
+  }
+
+  .primary-color-dark {
+    @apply text-sky-700;
+  }
+
+  .primary-color-darker {
+    @apply text-sky-800;
+  }
+
+  .apply-base-img-css {
+    @apply block h-full w-full max-w-full object-contain object-center;
+  }
 }
 
-@tailwind components;
 @tailwind utilities;
